objects/Account.object
<CustomObject>
    <fields>
        <fullName>Expected_Bookings_Data_Center_UCS_000__c</fullName>
        <label>Potential Bookings-Data Center UCS $000</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings_Routing_000__c</fullName>
        <label>Potential Bookings-Routing ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings_Security_000__c</fullName>
        <label>Potential Bookings-Security ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings_Services_000__c</fullName>
        <label>Potential Bookings-Services ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings_Switching_000__c</fullName>
        <label>Potential Bookings-Switching ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings_Telepresence_000__c</fullName>
        <label>Potential Bookings-Telepresence ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings_Wireless_000__c</fullName>
        <label>Potential Bookings-Wireless ($000)</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FACT_Codes__c</fullName>
        <description>Factiva Integration.  Records Factiva’s assigned company code for future integration efforts.</description>
        <label>TO BE DEL Factiva Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FACT_Last_Update_Time__c</fullName>
        <description>Factiva Integration.  Records the date and time of the last Factiva update.  Automatically populated by integration.</description>
        <label>TO BE DEL Factiva Last Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Factiva_Link_to_Company_Info__c</fullName>
        <description>Used for AP</description>
        <label>TO BE DEL Factiva: Link to Company Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Favorite_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QW-3016, Field used to indicate Favorite Account for EMER</description>
        <label>TO BE DELETED Favorite Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federal_Tax__c</fullName>
        <label>Federal Tax #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Account_Name__c</fullName>
        <description>Populates CR name first. If CR Name is null, then with English name. Finally, If English name is also null, then with standard name. This Field is visible for Data migration, Integration and Admin Profiles only</description>
        <formula>IF( LEN( CRName__c) = 0, IF( LEN( AccountNameEnglish__c)= 0, Name , AccountNameEnglish__c) , CRName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Address_Line_1__c</fullName>
        <description>Populates CR addressline1 first, if CR name is available. If CR Name is null, then with English addressline1. If English name is also null, then with standard addressline 1.This Field is visible for Data migration, Integration and Admin Profiles only</description>
        <formula>IF( LEN( CRName__c) = 0, IF( LEN( AccountNameEnglish__c)= 0, AddressLine1__c , AddressLine1_English__c) , CRAddressLine1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Address_Line_2__c</fullName>
        <description>Populates CR addressline2, if CR name is available. If CR Name is null, then with English addressline2. If English name is null, then with standard addressline 2.This Field is visible for Data migration, Integration and Admin Profiles only</description>
        <formula>IF( LEN( CRName__c) = 0, IF( LEN( AccountNameEnglish__c)= 0, AddressLine2__c , AddressLine2_English__c) , CRAddressLine2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_City__c</fullName>
        <description>Populates CR City, if CR name is available. If CR Name is null, then with English city. If English name is null, then with standard city value.This Field is visible for Data migration, Integration and Admin Profiles only</description>
        <formula>IF( LEN( CRName__c) = 0, IF( LEN( AccountNameEnglish__c)= 0, City__c , City_English__c) , CRCity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Country__c</fullName>
        <description>Populates CR country, if CR name is available. If CR Name is null, then with English country value. If English name is null, then with standard country value.This Field is visible for Data migration, Integration and Admin Profiles only</description>
        <formula>IF( LEN( CRName__c) = 0, IF( LEN( AccountNameEnglish__c)= 0, text(Country__c), text(Country_English__c)) , CRCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_State__c</fullName>
        <description>Populates CR State, if CR name is available. If CR Name is null, then with English state. If English name is null, then with standard state value.This Field is visible for Data migration, Integration and Admin Profiles only</description>
        <formula>IF( LEN( CRName__c) = 0, IF( LEN( AccountNameEnglish__c)= 0, State__c , State_Province_English__c) , CRState__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Zip_Postal_Code__c</fullName>
        <description>Populates CR Zip Postal Code, if CR name is available. If CR Name is null, then with English Zip Postal Code. If English name is null, then with standard Zip Postal Code value.This Field is visible for Data migration, Integration and Admin Profiles only</description>
        <formula>IF( LEN( CRName__c) = 0, IF( LEN(AccountNameEnglish__c)= 0, ZipPostalCode__c , Zip_Postal_Code_English__c) , CRZipPostalCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Zip Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasted_Attrition_Rollup__c</fullName>
        <label>Forecasted Attrition Rollup</label>
        <summarizedField>Opportunity.Forecasted_Attrition_000s__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Renewals Opportunity</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>1 - Prospect, 2 - Qualification, 4 - Agreement, 3 - Proposal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forecasted_Attrition__c</fullName>
        <label>Total Expected Attrition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_FY_Wallet_Total_000__c</fullName>
        <label>Future FY Wallet-Total ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GEO_VALID__c</fullName>
        <label>TO BE DELETED GEO VALID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GOE_Id__c</fullName>
        <label>GOE Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU_ID__c</fullName>
        <description>ID from CR</description>
        <label>GU ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Region__c</fullName>
        <description>Indicates Cisco Geo Region</description>
        <label>Geographic Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                    <color>#0B6FCE</color>
                    <label>Americas</label>
                </value>
                <value>
                    <fullName>APJ</fullName>
                    <color>#78C953</color>
                    <label>APJ</label>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                    <color>#E27001</color>
                    <label>EMEAR</label>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <description>Release: P360 March 2013 
Purpose: Stores the Geo Location of the account based on address of the account.</description>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Global_Organization_Entity_Name_Local__c</fullName>
        <description>OE fields</description>
        <label>Global Organization Entity Name (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Organization_Entity_Name__c</fullName>
        <description>OE fields</description>
        <label>Global Organization Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>TO BE DEL DL Update Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grow_Stage__c</fullName>
        <description>Partners who are making investments into their Cisco Practice, but currently have little to no exposure in the region.</description>
        <label>TO BE DELETED Grow Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HQSiteID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headquarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_Party_ID__c</fullName>
        <description>HQ_Party_Id is an identifier coming from CR for an Account.</description>
        <label>HQ Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Preferred_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Preferred Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HistoricalSalesVolume__c</fullName>
        <label>Historical Sales Volume ($000)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Horizontal_Focus__c</fullName>
        <description>APAC specific</description>
        <label>TO BE DELETED Horizontal Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-4</fullName>
                </value>
                <value>
                    <fullName>5-19</fullName>
                </value>
                <value>
                    <fullName>20-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100-149</fullName>
                </value>
                <value>
                    <fullName>150-249</fullName>
                </value>
                <value>
                    <fullName>250-499</fullName>
                </value>
                <value>
                    <fullName>500-749</fullName>
                </value>
                <value>
                    <fullName>750-999</fullName>
                </value>
                <value>
                    <fullName>1000-1499</fullName>
                </value>
                <value>
                    <fullName>1500-4999</fullName>
                </value>
                <value>
                    <fullName>5000-9999</fullName>
                </value>
                <value>
                    <fullName>10000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IBMHosts__c</fullName>
        <label>TO BE DELETED IBM Hosts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITBudget__c</fullName>
        <label>TO BE DELETED IT Budget ($'000)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>I_am_Account_Security_Manager__c</fullName>
        <formula>IF(CONTAINS(Security_AM__r.Reporting_Up_Manager_Chain__c , $User.Username),
'True',
IF(CONTAINS(Security_SE__r.Reporting_Up_Manager_Chain__c , $User.Username),
'True',
'False')
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am Account Security Manager?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_Partner_in_Region__c</fullName>
        <description>Is this Partner achieving according to the ICAMs business plan</description>
        <inlineHelpText>Is An Impact Partner In The Region</inlineHelpText>
        <label>TO BE DELETED Impact Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Increment_Annual_Recurring_Revenue__c</fullName>
        <label>Incremental Annual Recurring Rev. (iARR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent_Partner_Status_Image__c</fullName>
        <formula>IF(OR(ISPICKVAL(Validation_Flag__c,'Yes'),ISPICKVAL(Validation_Flag__c,'')),

IF((ISPICKVAL( Unallocated_Account__c ,'Yes')  &amp;&amp; (ISBLANK( Allocated_Partner_1__c ) &amp;&amp; ISBLANK( Allocated_Partner_2__c ) &amp;&amp; ISBLANK( Allocated_Partner_3__c )  &amp;&amp; ISBLANK( Allocated_Partner_4__c ) )), 
IMAGE("/servlet/servlet.FileDownload?file=015800000011rwA" , "Red"),

IF((NOT(ISPICKVAL( Unallocated_Account__c ,'Yes'))  &amp;&amp;  NOT(ISPICKVAL( Release_to_Unallocated_Pool__c,'Yes')) &amp;&amp; ((NOT (ISBLANK(Allocated_Partner_1__c )) &amp;&amp;  ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_2__c )) &amp;&amp;  ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_3__c )) &amp;&amp;  ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_4__c )) &amp;&amp;  ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c )))),

IMAGE("/servlet/servlet.FileDownload?file=015800000011rw9" , "Green"),

IF( NOT(ISPICKVAL( Unallocated_Account__c ,'Yes')  ||  ISPICKVAL( Release_to_Unallocated_Pool__c,'Yes')) &amp;&amp; (NOT (ISBLANK(Allocated_Partner_1__c )) || NOT (ISBLANK(Allocated_Partner_2__c )) || NOT (ISBLANK(Allocated_Partner_3__c )) || NOT (ISBLANK(Allocated_Partner_4__c ))),
IMAGE("/servlet/servlet.FileDownload?file=015800000011rwB" , "Yellow"),'')
)),'')</formula>
        <label>Incumbent Partner Status Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Partner_Status__c</fullName>
        <formula>IF(OR(ISPICKVAL(Validation_Flag__c,'Yes'),ISPICKVAL(Validation_Flag__c,'')), 

IF((ISPICKVAL( Unallocated_Account__c ,'Yes')  &amp;&amp; (ISBLANK( Allocated_Partner_1__c ) &amp;&amp; ISBLANK( Allocated_Partner_2__c ) &amp;&amp; ISBLANK( Allocated_Partner_3__c )  &amp;&amp; ISBLANK( Allocated_Partner_4__c ) )), 
'RED',

IF((NOT(ISPICKVAL( Unallocated_Account__c ,'Yes'))  &amp;&amp;  NOT(ISPICKVAL( Release_to_Unallocated_Pool__c,'Yes')) &amp;&amp; ((NOT (ISBLANK(Allocated_Partner_1__c )) &amp;&amp;  ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_2__c )) &amp;&amp;  ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_3__c )) &amp;&amp;  ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_4__c )) &amp;&amp;  ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c )))),

'GREEN',

IF(NOT(ISPICKVAL( Unallocated_Account__c ,'Yes')  ||  ISPICKVAL( Release_to_Unallocated_Pool__c,'Yes')) &amp;&amp; (NOT (ISBLANK(Allocated_Partner_1__c )) || NOT (ISBLANK(Allocated_Partner_2__c )) || NOT (ISBLANK(Allocated_Partner_3__c )) || NOT (ISBLANK(Allocated_Partner_4__c ))),
'YELLOW','')
))
,
'')</formula>
        <label>Incumbent Partner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_new_biz_models_from_Cisco__c</fullName>
        <description>Is Customer interested in new business models from Cisco</description>
        <label>TO BE DEL Interested in NBMs from Cisco?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Need More Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet_Connection_Type__c</fullName>
        <label>TO BE DELETED Internet Connection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>DSL Broadband</fullName>
                </value>
                <value>
                    <fullName>Cable Broadband</fullName>
                </value>
                <value>
                    <fullName>Leased Line</fullName>
                </value>
                <value>
                    <fullName>Frame Relay</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Ethernet Fibre</fullName>
                </value>
                <value>
                    <fullName>ISDN</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invited_to_ATP_or_has_MOU__c</fullName>
        <description>Is the Partner an ATP (authorized technology provider), does the Parnter have a MOU (Memorandum of Understanding) template filled out.</description>
        <inlineHelpText>Invited To ATP Or Has MOU</inlineHelpText>
        <label>TO BE DELETED ATP OR MOU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsEcosystemPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEcosystemPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cisco_Capital_Engaged__c</fullName>
        <description>This field is to provide the visibility on the financing of our technology solutions. 
This will facilitate Cisco AM community to flag deals that have the potential to be qualified for Cisco Capital Financing.</description>
        <label>Is Cisco Capital Engaged?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No-Not Required</fullName>
                </value>
                <value>
                    <fullName>Yes-Already Engaged</fullName>
                </value>
                <value>
                    <fullName>To Be Qualified with Capital</fullName>
                </value>
                <value>
                    <fullName>TA financial assessment completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jabber_Phone_Number__c</fullName>
        <description>Automatically copy the phone number and convert into the jabber search engine expected format so that incoming call can identify the record by matching phone number.</description>
        <externalId>true</externalId>
        <inlineHelpText>Automatically copy the phone number and convert into the jabber search engine expected format so that incoming call can identify the record by matching phone number.</inlineHelpText>
        <label>Jabber Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Business_Initiatives__c</fullName>
        <description>Key Business Initiatives taken up by the customer</description>
        <label>TO BE DELETED Key Business Initiatives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge_Management_Platform__c</fullName>
        <description>Used for AP</description>
        <label>TO BE DEL Knowledge Management Platform</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lans__c</fullName>
        <label>No. of LANs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineofBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial Named</fullName>
                </value>
                <value>
                    <fullName>Commercial Non-named</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manage_Stage__c</fullName>
        <description>Partners have with varying levels of purchase history and regional exposure, but show little to no action  to invest further into their Cisco Practice.</description>
        <label>TO BE DELETED Manage Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Services_Partner__c</fullName>
        <description>if the channel account’s parent account has ‘BE GEO SP w Blended M Goal’ is &gt; 0 then field will be set to Yes else it will be No.</description>
        <formula>IF(Parent.BE_GEO_SP_w_Blended_M_Goal__c &gt;0, 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Services Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_leader_committed_to_selling_Cisco__c</fullName>
        <description>Is the Partner the leader in their segment, technology, area</description>
        <inlineHelpText>Market Leader Committed To selling Cisco</inlineHelpText>
        <label>TO BE DELETED Market Leader</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TO BE DELETED Master Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Acceleration_program__c</fullName>
        <description>QW-3281A business initiative called MAP (Migration Acceleration Program) has been developed to track AM engagement in these accounts to ensure that these high potential value end customers are adequately served</description>
        <label>TO BE DEL Migration  AccelerationProgram</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Regional_Account__c</fullName>
        <description>Added as a part of July release QW-3539 to give the Sales Ops a way of monitoring internal programs and key accounts that could potentially be classified as Strategic in SFDC</description>
        <label>TO BE DELETED Multi-Regional Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSites_with_VPN__c</fullName>
        <label>No. of Sites with Other Connections</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetworkingBudget__c</fullName>
        <label>Networking Budget ($000)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_FY_Wallet_Total_000__c</fullName>
        <label>Next FY Wallet-Total ($000)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Data_Centre_Locations__c</fullName>
        <label>Number of Data Centre Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No. of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-19</fullName>
                </value>
                <value>
                    <fullName>20-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100-149</fullName>
                </value>
                <value>
                    <fullName>150-249</fullName>
                </value>
                <value>
                    <fullName>250-499</fullName>
                </value>
                <value>
                    <fullName>500-749</fullName>
                </value>
                <value>
                    <fullName>750-999</fullName>
                </value>
                <value>
                    <fullName>1000-1499</fullName>
                </value>
                <value>
                    <fullName>1500-4999</fullName>
                </value>
                <value>
                    <fullName>5000-9999</fullName>
                </value>
                <value>
                    <fullName>10000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Nodes_Active_Ports__c</fullName>
        <label>No. of Nodes/Active Ports</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_PC_s__c</fullName>
        <label>No. of PCs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1-4</fullName>
                </value>
                <value>
                    <fullName>5-19</fullName>
                </value>
                <value>
                    <fullName>20-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100-249</fullName>
                </value>
                <value>
                    <fullName>250-499</fullName>
                </value>
                <value>
                    <fullName>500-999</fullName>
                </value>
                <value>
                    <fullName>1000-1999</fullName>
                </value>
                <value>
                    <fullName>2000-4999</fullName>
                </value>
                <value>
                    <fullName>5000-9999</fullName>
                </value>
                <value>
                    <fullName>10000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Sites__c</fullName>
        <label>No.  of Sites</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Telephone_Extensions__c</fullName>
        <label>No. of Phones</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Data_Centers__c</fullName>
        <description>Number of data centers of the customer</description>
        <label>TO BE DELETED Number of Data Centers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-5</fullName>
                </value>
                <value>
                    <fullName>&gt;5</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>